2001-03-01 Ales Hvezda	 <ahvezda@geda.seul.org>	

	* src/o_move.c: Fixed a bug (pointed out by Matt Ettus) where an
	  endpoint was added to the netconn rubberband structure when it 
	  should not have been.  Bug was in an if statement which included
	  an || which was causing a false hit

	* src/*.c: Changed some // comments to be /* */

	* src/*.c: Fixed a bunch of -Wall warnings

2001-02-23 Ales Hvezda	 <ahvezda@geda.seul.org>	

	* src/x_print.c: Fixed a bug where if you specified portrait printing
	  via the *rc files, you would get incorrect centering of the image.
	  Bug pointed out by Wolfgang Buesser.

2001-02-19 Ales Hvezda	 <ahvezda@geda.seul.org>	

	* src/o_complex.c: Added code to get symbol translate working with
	  the new connection / cue system
	
2001-02-17 Ales Hvezda	 <ahvezda@geda.seul.org>	

	* src/o_move.c: Modified and put back the code which implements 
	  netconn rubberbanding

	* src/o_basic.c: Enabled some code to support above

	* src/x_event.c: Enabled some code to support above

	* src/o_grips.c: Added a redraw_single of the original object if
	  you try to create a zero length object with a grip 

	* src/i_callbacks.c, g_*.c, x_menus.c: Integrated patch from Chris
	  Ellec for turning on and off the netconn rubberbanding

	* src/x_window.c: Integrated patch by Rolf Fiedler, increasing the
	  size of the main window depending on the screen resolution

	* lib/system-gschemrc.in: Made the default for netconn-rubberband
	  enabled by default
	
2001-02-11 Ales Hvezda	 <ahvezda@geda.seul.org>	

	* src/x_print.c: Fixed a filename entry widget bug, filenames are
	  typically longer than 79 characters, so increased size to 200
	  chars

	* src/x_image.c: Fixed same bug as above for image dialog box

	* src/o_buffer.c: Misc code changes to support the new connection
	  and cue system
	
2001-02-10 Ales Hvezda	 <ahvezda@geda.seul.org>	

	* src/o_complex.c: Added code to properly update connection / cues
	  when placing complex objects
