@@ -1,3 +1,8 @@
+2001-03-02  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/o_arc_basic.c: Fixed a bug pointed out by Bruno Schwander
+	  (Arcs were to thin compared to thin lines/boxes)
+
 2001-03-01  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/*.c: Converted some // comments to /* */
